fix: preserve configured chat color order